[tool.poetry]
name = "grafana_publisher"
version = "0.2.0"
description = "Script for publishing Grafana dashboards from a developer instance to a production instance."
authors = ["Josef Nevrly <jnevrly@alps.cz>"]
license = "Not open source"

readme = "README.rst"

repository = "https://github.com/JNevrly/grafana_publisher"

documentation = "https://grafana-publisher.readthedocs.io"

homepage = "https://github.com/JNevrly/grafana_publisher"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
# List project dependencies here
python = "^3.6"
click = "^8.0.1"
arrow = "^0.12.1"
onacol = "^0.3.1"
requests = "^2.18.4"
pathvalidate = "^2.5.0"

[tool.poetry.scripts]
grafana_publisher = "grafana_publisher.cli:main"


[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^18.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = {extras = ["toml"], version = "^5.5"}
Sphinx = "^4.1.1"
sphinx-rtd-theme = "^0.5.2"
twine = "^3.4.2"

setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
mypy = "^0.910"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
source = ["grafana_publisher"]
relative_files = true

[tool.coverage.report]
fail_under = 100
